--- a/css/template.css
+++ b/css/template.css
@@ -19,6 +19,11 @@
   font-weight: 400;
   src: local("Muli-Black"), url(../../fonts/Muli-Black.ttf) format("truetype"); }
 @font-face {
+  font-family: 'Neuton-Regular';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Neuton-Regular"), url(../../fonts/Neuton-Regular.ttf) format("truetype"); }
+@font-face {
   font-family: 'Torzu-Regular';
   font-style: normal;
   font-weight: 400;
@@ -28,9 +33,6 @@
   font-style: normal;
   font-weight: 400;
   src: local("Torzu-Mono"), url(../../fonts/Torzu-Mono.ttf) format("truetype"); }
-.rtl {
-  text-align: right; }
-
 body {
   margin: 0;
   padding: 0;
@@ -126,6 +128,33 @@ h3 {
   @media only screen and (min-width: 1025px) {
     .page {
       overflow: visible; } }
+
+.icon-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .icon-grid .grid-icon {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 76px;
+    height: 76px;
+    margin: 6px;
+    background-color: #2A4F6E;
+    cursor: pointer; }
+    .icon-grid .grid-icon span {
+      transform: scaleY(1.2);
+      margin-top: -4px; }
+
+.tall-num {
+  font-family: 'Neuton-Regular';
+  font-size: 24px;
+  transform: scaleY(1.2);
+  margin-top: -4px; }
+
+.grid-icon:hover, .dash-item:hover .dash-icon {
+  background-color: #D2CA78 !important;
+  color: #2A4F6E; }
 
 form input[type="checkbox"] {
   opacity: 0;
@@ -276,5 +305,11 @@ p.enoch-reg, p.enoch-mono {
 
 #nav-menu a.enoch-mono {
   font-family: 'Torzu-Mono'; }
+
+.rtl {
+  text-align: right; }
+
+.center {
+  text-align: center; }
 
 /*# sourceMappingURL=template.css.map */
