--- a/css/template.scss
+++ b/css/template.scss
@@ -167,7 +167,7 @@ h3 {
 }
 
 .tall-num {
-	font-family: 'Neuton-Regular';
+	font-family: 'Neuton-Regular'!important;
 	font-size: 24px;
 	transform: scaleY(1.2);
 	margin-top: -4px;
