--- a/css/template.scss
+++ b/css/template.scss
@@ -108,12 +108,13 @@ h3 {
 	display: block;
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: calc( 100% - #{$hdr-height} );
 	opacity: 1;
 	z-index: 1;
-	padding: $hdr-height + 20px 20px 40px;
+	top: $hdr-height;
+	padding: 20px 20px 40px;
 	background-color: #fff;
-	overflow: scroll;
+	overflow: auto;
 	@include transition( opacity, .5s, ease-in-out, 0s );
 	@include box-sizing( border-box );
 	a {
